--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -71,6 +71,7 @@
 
 /* ==========Taps============= */
 .item {
+  max-width: 27rem;
   background-color: white;
   padding: 5px;
   border-radius: 50px;
