--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -20,7 +20,8 @@ nav {
   border-radius: 3rem;
 }
 
-nav a {
+nav a:link,
+nav a:visited {
   background: transparent;
   padding: 0.5rem;
   border-radius: 50%;
@@ -32,7 +33,8 @@ nav a {
   transition: var(--transition);
 }
 
-nav a:hover {
+nav a:hover,
+nav a:active {
   background: var(--color-primary1-hover);
   color: white;
   scale: 1.1;
